--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "firebase/php-jwt": "^5.2",
         "phpmailer/phpmailer": "^6.1",
         "rain/raintpl": "3.0.0",
-        "vlucas/phpdotenv": "^5.4",
-        "slim/slim": "3.*"
+        "vlucas/phpdotenv": "^5.4"
     },
     "scripts":{
         "start":"php -S localhost:8080",
